[metadata]
name = limetr
version = 0.0.6
description =
long_description = file: README.rst
long_description_content_type = text/x-rst
author = IHME Math Sciences
author_email = zhengp@uw.edu
license = BSD 2-Clause License
url = https://github.com/zhengp0/limetr


[options]
zip_safe = False
install_requires =
    numpy
    scipy
    spmat==0.0.9
include_package_data = True
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx
    sphinx-autodoc-typehints
    furo
dev =
    pytest